--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap");
 
 body {
-  background-image: url("the bg 3.png");
+  background-image: url("the bg 4.jpg");
 }
 
 * {
